confirmed image path. changed config path to add a slash

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ title: gsa epandda
 
         <div class="col-sm-4 text-center provider">
           <a href="https://www.idigpaleo.org">
-            <img src="{{site.baseurl}}media/idigpaleo.png" style="height: 100px; width: 85%">
+            <img src="{{site.url}}{{site.baseurl}}/media/idigpaleo.png" style="height: 100px; width: 85%">
           </a>
         </div>
 
