--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@ title: gsa epandda
     <div class="module">
       <h3>Problem areas / Questions or Suggestions?</h3>
 
-      <p>Originally, we had hoped to have our API query out to PBDB and iDigBio in realtime to pull data. Early dev tests proved
-         this to be hard to group large amounts of data, process for matches and return to the user in response times that were exceeding 1 minute.
+      <p>Originally, we had hoped to have our API query out to PBDB and iDigBio in realtime to pull data. Early dev tests indicated that the times required
+         to group, process for matches and return large formatted datasets ePANDDA handles were far from realtime, exceeding 1 minput per request in most cases.
          We've been working with a cut of data from PBDB and creating quick index collections in MongoDB to preprocess some data associations as well
          as keeping track of matches we've already made in an effort to learn from previous queries.</p>
 
